# realtime-session-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGES_SUMMARY.md  CI_CD_SETUP.md  CI_CD_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_APPLIED.md  MAKEFILE_GUIDE.md  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  PROJECT_ANALYSIS.md  PROJECT_COMPLETE.md  PROJECT_REVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  TEST_RESULTS.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: WORKFLOWS.md  copilot-instructions.md  dependabot.yml
.github/workflows/: ci-cd.yml  pr-checks.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_add_version_column.py  20250926_000000_initial_baseline.py
app/: __init__.py  celery_app.py  database.py  exceptions.py  main.py  metrics.py  validators.py
app/auth/: create_user.py  jwt.py
app/instrumentation/: metrics.py
app/middleware/: logging_middleware.py  rate_limit.py
app/models/: __init__.py  call.py  state_machine.py  user.py
app/routes/: __init__.py  auth.py  interaction.py
config/: __init__.py  settings.py
docs/: ARCHITECTURE_DECISIONS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  TESTING_GUIDE.md
monitoring/: alerts.yml  prometheus.yml
scripts/: create_admin.py
tests/: conftest.py  test_api.py  test_asterisk.py  test_auth.py  test_integration.py  test_interaction.py  test_simple.py
(+13 files in other folders)
